<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host">Server Host</string>
    <string name="server_port">Server Port</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="first_name_login">First Name</string>
    <string name="last_name_login">Last Name</string>
    <string name="email_login">Email</string>
    <string name="family_map_text">Family Map</string>
    <string name="male_login">Male</string>
    <string name="female_login">Female</string>
    <string name="login_login">Login</string>
    <string name="regsiter_login">Register</string>
    <string name="login_failed_toast">Login Failed</string>
    <string name="login_success_toast">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_google_maps_fragment">Map</string>
    <string name="title_activity_maps_fragment">Map</string>

</resources>
